--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "jasmine-spec-reporter": "^5.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.26",
