--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "jasmine-spec-reporter": "^5.0.2"
-  },
+  "dependencies": { },
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.26",
     "typescript": "^3.9.7",
-    "protractor": "^7.0.0"
+    "protractor": "^7.0.0",
+    "jasmine-spec-reporter": "^5.0.2"
   },
   "scripts": {
     "clean": "del /s dist",
