--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "jasmine-spec-reporter": "^5.0.2"
   },
   "scripts": {
-    "clean": "del /s dist",
+    "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
-    "test": "npm run build && protractor dist/protractor/local.config.js"
+    "test:local": "npm run build && protractor dist/protractor/local.config.js",
+    "test:headless": "npm run build && protractor dist/protractor/headless.config.js"
   },
   "repository": {
     "type": "git",
