--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:local": "npm run build && protractor dist/protractor/local.config.js",
     "test:headless": "npm run build && protractor dist/protractor/headless.config.js",
     "test": "npm run test:headless",
-    "postinstall": "webdriver-manager update --versions.chrome 84.0.4147.89 --gecko false"
+    "postinstall": "webdriver-manager update --gecko false"
   },
   "repository": {
     "type": "git",
