--- a/package.json
+++ b/package.json
@@ -6,24 +6,21 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": { },
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.26",
-    "jasmine-spec-reporter": "^5.0.2",
+    "typescript": "^3.9.7",
     "protractor": "^7.0.0",
-    "tslint": "^6.1.2",
-    "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.9.7"
+    "jasmine-spec-reporter": "^5.0.2"
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run lint && npm run clean && tsc",
+    "build": "npm run clean && tsc",
     "test:local": "npm run build && protractor dist/protractor/local.config.js",
     "test:headless": "npm run build && protractor dist/protractor/headless.config.js",
     "test": "npm run test:headless",
-    "postinstall": "webdriver-manager update --gecko false",
-    "lint": "tslint --project tsconfig.json protractor/**/*.ts test/**/*.ts src/**/*.ts"
+    "postinstall": "webdriver-manager update --gecko false"
   },
   "repository": {
     "type": "git",
