--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.26",
+    "jasmine-awesome-report": "0.0.3",
     "jasmine-spec-reporter": "^5.0.2",
     "protractor": "^7.0.0",
     "tslint": "^6.1.2",
